# cellvet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: rules.md
examples/: README.md  clean.ipynb  stale_state.ipynb
scripts/: smoke.sh
src/cellvet/: __init__.py  __main__.py  analyzer.py  cli.py  execution.py  flow.py  magics.py  names.py  notebook.py  report.py  rules.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_execution.py  test_flow.py  test_magics.py  test_names.py  test_notebook.py  test_report.py  test_rules.py
